unpackaged/main/default/objects/ET_Vehicle_Type_Master__c/ET_Vehicle_Type_Master__c.object-meta.xml
<CustomObject>
    <label>Vehicle Type Master</label>
    <nameField>
        <displayFormat>VTM-{0000}</displayFormat>
        <label>Vehicle Type Master Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Type Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>