unpackaged/main/default/objects/ET_Vehicle_Type_Master__c/fields/ET_Vehicle_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Sub_Type__c</fullName>
    <label>Vehicle Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.5 Ton</fullName>
            </value>
            <value>
                <fullName>10 Ton</fullName>
            </value>
            <value>
                <fullName>12 Ton</fullName>
            </value>
            <value>
                <fullName>15 Ton</fullName>
            </value>
            <value>
                <fullName>1 Ton</fullName>
            </value>
            <value>
                <fullName>2.5 Ton</fullName>
            </value>
            <value>
                <fullName>20 Ton</fullName>
            </value>
            <value>
                <fullName>25 Ton</fullName>
            </value>
            <value>
                <fullName>2 Seater</fullName>
            </value>
            <value>
                <fullName>2 Ton</fullName>
            </value>
            <value>
                <fullName>3.5 Ton</fullName>
            </value>
            <value>
                <fullName>30 Ton</fullName>
            </value>
            <value>
                <fullName>3 Ton</fullName>
            </value>
            <value>
                <fullName>3 ton to 12 Ton</fullName>
            </value>
            <value>
                <fullName>4.5 Ton</fullName>
            </value>
            <value>
                <fullName>4 Cylinder</fullName>
            </value>
            <value>
                <fullName>4 Seater</fullName>
            </value>
            <value>
                <fullName>4 x 2 Truck</fullName>
            </value>
            <value>
                <fullName>6 Cylinder</fullName>
            </value>
            <value>
                <fullName>6 Seater</fullName>
            </value>
            <value>
                <fullName>6 x 4 Truck</fullName>
            </value>
            <value>
                <fullName>7 Ton</fullName>
            </value>
            <value>
                <fullName>8 Cylinder</fullName>
            </value>
            <value>
                <fullName>8 Seater</fullName>
            </value>
            <value>
                <fullName>Built in Tanker</fullName>
            </value>
            <value>
                <fullName>Bulk Trailer Banana</fullName>
            </value>
            <value>
                <fullName>Car Carrier Trailer</fullName>
            </value>
            <value>
                <fullName>Cargo Body</fullName>
            </value>
            <value>
                <fullName>Crane</fullName>
            </value>
            <value>
                <fullName>Curtain Trailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>