unpackaged/main/default/objects/ET_Vehicle_Type_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Vehicle_Type__c</columns>
    <columns>ET_Vehicle_Sub_Type__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>